--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>titulo editado</title>
+    <title>titulo editado 2</title>
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <h2>Hola clase especializacion</h2>
 </body>
 </html>
