--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
-    <h2>Hola clase especializacion cambio en feature_x</h2>
+    <h2>Hola clase especializacion cambio en feature_x segundo intento</h2>
 </body>
 </html>
